--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,7 @@
         color: hsl(220, 14%, 75%);
         text-decoration: line-through;
         padding: 0.5em 0em 2em 0em;
+        font-weight: 700;
     }
 
     .registro{
@@ -223,6 +224,10 @@
     .boton_texto{
         padding: 0em 0.5em;
         font-weight: 700;
+    }
+
+    .icono_menu{
+        display: none;
     }
 
 /* MUESTRA */
@@ -442,3 +447,271 @@
         font-weight: 700;
     }
 
+.contenedor6{
+    display: none;
+}
+
+.contenedor7{
+    display: none;
+}
+
+.attribution{
+    position: absolute;
+    top: 950px;
+    left: 680px;
+    justify-content: center;
+}
+
+/* PARTE MOBIL */
+@media screen and (max-width: 375px){
+    .contenedor1{
+        padding: 0em;
+        width: 100%;
+        position: absolute;
+        z-index: 11;
+    }
+
+        .bloque1{
+            grid-template-columns: 15% 59% 13% 13%;
+            width: 100%;
+            border: none;
+            padding: 1em 0em;
+        }
+
+        .icono_menu{
+            display: block;
+            padding-left: 15px;
+        }
+
+        .menu{
+            display: none;
+        }
+
+        .bloque1 .logo{
+            padding-bottom: 0em;
+        }
+
+        .logo{
+            order: 2;
+        }
+
+        .carrito{
+            order: 3;
+            margin: 0em;
+            text-align: center;
+        }
+
+        .usuario{
+            order: 4;
+            margin: 0em;
+            padding: 0em;
+            text-align: center;
+        }
+
+        .usuario img{
+            width: 24px;
+            
+        }
+
+        .bloque2{
+            display: flex;
+            flex-direction: column;
+        }
+
+        .imagenes{
+            display: none;
+        }
+
+        .compra{
+            margin: 19em 0em 0em 0em;
+            padding: 1em 1em 0em 1em;
+        }
+
+        .texto h3{
+            font-size: 0.7em;
+        }
+
+        .texto h1{
+            font-size: 1.7em;
+        }
+    
+        .texto p{
+            font-size: 0.9em;
+        }
+        
+        .cuenta{
+            padding: 0em 0em 1em 0em;
+        }
+
+        .precio{
+            position: absolute;
+            top: 695px;
+            left: 275px;
+        }
+
+        .registro{
+            display: flex;
+            flex-direction: column;
+        }
+
+        .conteo{
+            margin-right: 0em;
+            margin-bottom: 1em;
+        }
+
+    .contenedor2{
+        margin-top: 4em;
+        display: none;
+        position: absolute;
+        z-index: 11;
+    }
+        .contenedor2::before {
+            opacity: 0;
+        }
+
+        .foto_principal {
+            height: 100%;
+            overflow: hidden;
+        }
+        
+        .foto_principal img {
+            height: 120%; 
+            object-fit: cover;
+        }
+
+        .atras{
+            padding: 0.65em;
+            top: 165px;
+            left: 15px;
+        }
+
+        .adelante{
+            padding: 0.65em;
+            top: 165px;
+            left: 310px;
+        }
+
+        .cuadro_fotos{
+            padding: 0em;
+        }
+
+        .cerrar{
+            display: none;
+        }
+
+        .foto_principal img{
+            border-radius: 0px;
+        }
+
+        .subfoto{
+            display: none;
+        }
+    
+    .contenedor3{
+        position: absolute;
+        z-index: 11;
+        top: 80px;
+        left: 0px;
+        margin: 0em 0.5em;
+        width: 95%;
+    }
+
+        .carrito_vacio h1{
+            padding: 0em 1em 0.5em 1em;
+        }
+
+        .carritov_texto p{
+            padding: 4.5em 6em;
+        }
+
+    .contenedor4{
+        position: absolute;
+        z-index: 11;
+        top: 175px;
+        left: 0px;
+        width: 335px;
+        margin-left: 12px;
+    }
+
+        .linea_texto{
+            font-size: 0.9em;
+            padding-left: 2em;
+        }
+
+    .contenedor5{
+        position: absolute;
+        z-index: 11;
+        top: 5px;
+        left:277px;
+    }
+    
+        .contador{
+            background-color: hsl(26, 100%, 55%);
+            color: hsl(223, 64%, 98%);
+            font-family: "Kumbh Sans", serif;
+            border-radius: 0.5em;
+            text-align: center;
+            padding: 0em 1em;
+            margin: 1em 0em 2em 1em;
+            font-size: 0.6em;
+            font-weight: 700;
+        }
+
+    .contenedor6{
+        position: absolute;
+        background-color: hsl(0, 0%, 100%);
+        width: 65%;
+        height: 135vh;
+        z-index: 40;
+        font-family: "Kumbh Sans", serif;
+        display: none;
+    }
+
+        .cerrar_nuevo{
+            padding: 20px;
+        }
+
+        .menu_nuevo{
+            position: absolute;
+            display: flex;
+            flex-direction: row;
+        }
+
+        .menu_nuevo ul{
+            margin-left: -1em;
+        }
+
+        .raya_nuevo li{
+            list-style: none;
+            text-align: start;
+            cursor: pointer;
+        }
+
+        .raya_nuevo{
+            padding: 1em 0em;
+        }
+
+        .raya_nuevo:hover{
+            border-bottom: 3px solid hsl(26, 100%, 55%);
+        }
+
+    .contenedor7{
+        position: absolute;
+        display: none;
+    }
+        
+        .sombra{
+            background-color: hsl(0, 0%, 0%);
+            opacity: 0.8;
+            width: 375px;
+            height: 135vh;
+            position: absolute;
+            z-index: 39;
+        }
+
+    .attribution{
+        position: absolute;
+        top: 890px;
+        left: 60px;
+    }
+}
